Fix shifted layout

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
@@ -108,7 +108,7 @@
     &__links {
         display: flex;
         flex-direction: column;
-        width: 48.75rem;
+        max-width: 48.75rem;
         margin-top: 3rem;
 
         > a {
